change myFile to image

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
       div.span12
         form(method='post', action='/')
           legend express-upload-progress
-          input(type='file', name='myFile', id='myFile')
+          input(type='file', name='image', id='image')
           p
           div.form-actions
             input.btn.btn-primary(type='submit', value='Submit')
